--- a/Taller 1/style.css
+++ b/Taller 1/style.css
@@ -1,6 +1,31 @@
-body{
+body {
     background-color: blue;
 }
-#gigante{
-    background-color: gray;
+
+header{
+    text-align: center;
 }
+
+footer{
+    text-align: center;
+    border: 1px black solid;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+    background-color: gray;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+  }
+
+  .grid-item {
+    background-color: #2196F3;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
