--- a/Taller 1/style.css
+++ b/Taller 1/style.css
@@ -2,30 +2,60 @@ body {
     background-color: blue;
 }
 
-header{
+header {
     text-align: center;
 }
 
-footer{
+footer {
     text-align: center;
     border: 1px black solid;
+    margin-top: 5%;
+}
+
+.gigante{
+    border-radius: 50px;
+    border: 1px solid black;
+    background-color: gray;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
-    background-color: gray;
+    grid-template-columns: 25% 25% 25% 25%;
     padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
     width: auto;
-  }
+}
 
-  .grid-item {
+.container {
+    margin: 3%;
+}
+
+.main-grid-container {
+    display: grid;
+    grid-template-columns: 25% 75%;
+    padding: 10px;
+    width: auto;
+}
+
+#C {
+    background-color: rgb(220, 187, 124);
+}
+
+
+.grid-item {
     background-color: #2196F3;
     border: 1px solid rgba(0, 0, 0, 0.8);
     border-radius: 10px;
     padding: 20px;
+    margin: 1%;
     font-size: 30px;
     text-align: center;
-  }
+}
+
+.grid-item:hover {
+    background-color: #ccd8e1;
+    transition: 50ms;
+}
